testdata/baselines/reference/submodule/compiler/jsxIntrinsicUnions.errors.txt
jsxIntrinsicUnions.tsx(3,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.


==== jsxIntrinsicUnions.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    import * as React from "react";
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    const El = Math.random() ? 'h1' : 'h2';
    
    const tag = <El className="ok" key="key">{"Title"}</El>;
    